--- a/q/275303.html
+++ b/q/275303.html
@@ -39,7 +39,10 @@
 <pre><code>f=(a,b,c)=&gt;[a+b+c,c+a+b,c+b+a].map(s=&gt;m(20+s).isValid())
 </code></pre>
 <p>Based on my <a href="https://codegolf.stackexchange.com/a/275308/119296">Google Sheets answer</a>. Expects three string arguments as in <code>f('24','12','31')</code>.</p>
-<p>Requires an import. In <a href="https://developers.google.com/apps-script" rel="nofollow noreferrer">Apps Script</a>:</p>
+<p>Requires an import. In Node.js:</p>
+<pre><code>m=require('moment')
+</code></pre>
+<p>In <a href="https://developers.google.com/apps-script" rel="nofollow noreferrer">Apps Script</a>:</p>
 <pre><code>eval(UrlFetchApp.fetch('https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js').getContentText())
 m = moment
 </code></pre>
