--- a/q/105998.html
+++ b/q/105998.html
@@ -79,6 +79,7 @@ drop 3.(&gt;&gt;=(&quot; | &quot;++))                                           
                                                          printf&quot;%-5d%-5s&quot;                                                                                           ... using this pretty-printing function to make a table cell
 </code></pre>
 <p>Shorter <code>intercalate &quot; | &quot;</code> adapted from a <a href="https://codegolf.stackexchange.com/a/266748/73884">tip by @corvus_192</a>.</p>
+<p>Here's another 191-byter that takes a different approach to translating numbers to strings: <code>drop 3.(&gt;&gt;=(&quot; | &quot;++))&lt;$&gt;3#&quot;Dec  Chr  &quot;:[34#'-']:(zipWith(printf&quot;%-5d%-5s&quot;.(+32))&lt;*&gt;map((&quot;Space&quot;:map pure['!'..'~']++[&quot;DEL&quot;])!!)&lt;$&gt;[[c,c+32..95]|c&lt;-[0..31]])</code></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 300 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import(.&quot;fmt&quot;;.&quot;strings&quot;)
