--- a/q/275291.html
+++ b/q/275291.html
@@ -26,14 +26,32 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>080</td><td>JavaScript V8</td><td>240901T191037Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275292#275292">Arnauld</a></td></tr>
-<tr d-ix="1"><td>072</td><td>JavaScript V8</td><td>240902T084645Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275305#275305">l4m2</a></td></tr>
-<tr d-ix="2"><td>018</td><td>05AB1E</td><td>240902T074349Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275302#275302">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>240</td><td>Python3</td><td>240902T011448Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275296#275296">Ajax1234</a></td></tr>
-<tr d-ix="4"><td>014</td><td>Jelly</td><td>240901T193948Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275293#275293">Unrelate</a></td></tr>
-<tr d-ix="5"><td>052</td><td>Charcoal</td><td>240901T222104Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275294#275294">Neil</a></td></tr>
+<tr d-ix="0"><td>116</td><td>Python 3</td><td>240903T201403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275333#275333">apilat</a></td></tr>
+<tr d-ix="1"><td>080</td><td>JavaScript V8</td><td>240901T191037Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275292#275292">Arnauld</a></td></tr>
+<tr d-ix="2"><td>072</td><td>JavaScript V8</td><td>240902T084645Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275305#275305">l4m2</a></td></tr>
+<tr d-ix="3"><td>018</td><td>05AB1E</td><td>240902T074349Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275302#275302">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>240</td><td>Python3</td><td>240902T011448Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275296#275296">Ajax1234</a></td></tr>
+<tr d-ix="5"><td>014</td><td>Jelly</td><td>240901T193948Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275293#275293">Unrelate</a></td></tr>
+<tr d-ix="6"><td>052</td><td>Charcoal</td><td>240901T222104Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275294#275294">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 80 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 116 bytes</h1>
+<p>The input doesn't contain the empty index 0 array.</p>
+
+<pre class="lang-python prettyprint-override"><code>def f(c, n):
+ a=set([()]*-~-n)
+ for O in c[:n]:n-=1;a|=set(tuple(sorted([*x,o]))for o in O for x in f(c,n))
+ return a
+</code></pre>
+<p><a href="https://tio.run/##NYzBCoMwEETvfsWyp11JDq03i5cevfgBIQfRhAplIzGChdJfT9XSwzAz8GbmV3oEqXIenQdPgxKuC@ibxSUyxLbUHy1cgA8ROpgEBlOLrUU3l1v/PrG0zk9HS4jJjWTKTQXLfPDh4Ltzuh3xd7@fRZfWKNDnOU6SyJMBgwMqwAWt2vP1tL/wjgpbtLCXijl/AQ" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>If we are allowed to return a garbage character in each of the multisets (i.e. <code>{'$2', '$cs', '$ss', '$cc'}</code> instead of <code>{'2', 'cs', 'ss', 'cc'}</code>, the code below is <strong>114 bytes</strong>.</p>
+<pre class="lang-python prettyprint-override"><code>def g(c, n):
+ a=set('$'*-~-n)
+ for O in c[:n]:n-=1;a|=set(''.join(sorted(x+o))for o in O for x in g(c,n))
+ return a
+</code></pre>
+<p><a href="https://tio.run/##NYzNCoMwEITvPsWyFMy2SaH1luKlx158AMlBNFo9bCSmYKH01VN/6GGYGfhmxnd4Os5ibGwLnaglk06gyicbRHpIj@qrmBJonYcCeoa61Gw0q/xyqz47lZ4H17OYnA@2EfPJEa24W/FiW85r3M@XL2/DyzNUcfQ9B9GJEkqsUQJOaOSSr5v9hXeU@EADS8mI4g8" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 80 bytes</h1>
 <p>Expects <code>(list_of_lists)(n)</code> without any list for weight 0. Outputs by printing comma-separated strings.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;g=(n,...o)=&gt;n?a.map(b=&gt;n--&gt;0&amp;&amp;b.map(c=&gt;g(n,...o,c))):o+&quot;&quot;==o.sort()&amp;&amp;print(o)
@@ -60,14 +78,14 @@ n ?                 // if n is not zero:
                     //   but &quot;c,s,c&quot; and &quot;s,c,c&quot; are not)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 72 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 72 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;g=(n,...o)=&gt;n?a.map(b=&gt;n--&gt;0&amp;&amp;b.map(c=&gt;c&lt;o[0]||g(n,c,...o))):print(o)
 </code></pre>
 <p><a href="https://tio.run/##dY7BCoJAEIbv@xTDHmQHdDVNiGwNO/YKsodtSzFoFRXp4LubrhRemtPM9/0M/1MNqtNt1fTecJgKMSmRloIZl3Neo0jNWfGXathtXj0vDRznZm8tUn2q80COYzmn9ZpHPDZtZXpW46Rr0/WQgYCcAORUUxdoR6ULvg@VuT/esLMiXJidnwgX8aVbEf0Te/vqQl16pXIrYiITQgqWIYswgbUeJiuJcfoA" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 <p>From Arnauld's</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 18 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 18 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>FĆ}¹Åœèε.«âεS{]€`Ù
 </code></pre>
 <p>Inputs in the order <span class="math-container">\$n,objectLists\$</span>, including an empty list at index 0.<br />
@@ -94,7 +112,7 @@ Assumes the objects are always single characters (otherwise the <code>S</code> s
          # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Python3, 240 bytes</h1>
+<div id="pu4" class="pu"><h1>Python3, 240 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>from itertools import*
 R=range
 def f(c,n):
@@ -105,7 +123,7 @@ def f(c,n):
 </code></pre>
 <p><a href="https://tio.run/##JY6xTsMwEIb3PMXJ09k9VKALCnihG90aqYvlATk2OEptx3GHCvHswSHS6Yb/Pt33p3v5juHwkvKyuByv4IvNJcZxBn9NMRfRnGX@DF@26a0Dh4YCbxuYpEKFfvdERnnNXczgwQc442gDGs69g/Wi6ZGU5rqBFTFUqFuxqb6AihQpQ3v3duyh3NJoca5K22PH@QaYFj0dOQkjzeu0q1ZDF1KiI3HatMOmxfBQ@H5fG/2npzVNOfY3U1CooxZDrYSXVpbdIDx/k0EvKftQ8Ec4VNWmmGEEbGaaFHte9zbsnRH7YLrRdOC/fPkD" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>15</s> 14 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>15</s> 14 bytes</h1>
 <pre><code>ŒṗịŒp€ẎṢ€Qɓ;Ṭ}
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///opIc7pz/c3X10UsGjpjUPd/U93LkIyAg8Odn64c41tf@BIkDu4eVAwgEi5f7/fzSXgoKyQnSsjgIMKCtk5qWkVigYAGWilZKVdBSUipWA8jBxQ7C4kRJMC0zcCCSOxRxjHOImYHOclHSUvJRikcRNuWL/mwEA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -149,7 +167,7 @@ Lr‘ṁƒḷ          This reuses the empty first list repeatedly to pad to n+1
 </code></pre>
 <p>As an amusing aside... I meant to use <code>¥</code> in place of <code>$</code>, but there's no difference here, because apparently <code>/</code> coercing its operand to a dyad even affects how said operand chains.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 52 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 52 bytes</h1>
 <pre><code>⊞υ⊞ＯＥθκωＦυ≡§Ｉ⁻↨Ｅ§ι±¹§θκ¹η⁰0…⮌ι¹-¿⊖Ｌι⊞⊞ＯυΦιλ⊞Ｏι⁺⊟ι§ι⁰
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=VVBBTsMwEBTXvmKV01o4UlMJhOBEg5BAFCKuVQ_G3TQWJgm204KqvoRLDyD4UnkNm7SV6MEae3dndsYfP7pQTlfKrtdfTcjjs9-j46zxBTYSWnyoyalQORypGl8lPAsJCyEuennlABsBfmGCLgAvw005pTdMlQ84MmXjcag8dbx9z0i4p5kKhIlgnX25k-V3wqdoL30hYNnTTIeoH51D5kwZMH3XltKiqvGR5uRY23QkNrMdjXnU5IBXpB29UBloindUzkLBkyzZ5ToIxSGvjQ3kWmu2XX3Q5mJmOUjGO80_w6azyHtXn_5J-93PfY-jeG6jySYeLyPNXhIJkd_hgHHAOGQ8YbxtcSXhdLIl_wE" rel="noreferrer">Attempt This Online!</a> Link is to verbose version of code. Takes the collection as a dictionary mapping coin identifiers to values. Explanation:</p>
