--- a/q/275303.html
+++ b/q/275303.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>076</td><td>JavaScript Node.js + momentjs</td><td>240903T101110Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275318#275318">doubleun</a></td></tr>
-<tr d-ix="1"><td>058</td><td>Charcoal</td><td>240903T222310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275337#275337">Neil</a></td></tr>
+<tr d-ix="0"><td>058</td><td>Charcoal</td><td>240903T222310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275337#275337">Neil</a></td></tr>
+<tr d-ix="1"><td>076</td><td>JavaScript Node.js + momentjs</td><td>240903T101110Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275318#275318">doubleun</a></td></tr>
 <tr d-ix="2"><td>134</td><td>Go</td><td>240903T191837Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275332#275332">bigyihsu</a></td></tr>
 <tr d-ix="3"><td>120</td><td>Retina 0.8.2</td><td>240903T175255Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275330#275330">Neil</a></td></tr>
 <tr d-ix="4"><td>079</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
@@ -37,34 +37,10 @@
 <tr d-ix="8"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
 <tr d-ix="9"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (Node.js) + <a href="https://momentjs.com/" rel="nofollow noreferrer">momentjs</a>, 76 bytes</h1>
-<pre><code>m=require('moment')
-f=(a,b,c)=&gt;[a+b+c,c+a+b,c+b+a].map(s=&gt;m(20+s).isValid())
-</code></pre>
-<p>Based on my <a href="https://codegolf.stackexchange.com/a/275308/119296">Google Sheets answer</a>. Expects three string arguments as in <code>f('24','12','31')</code>.</p>
-<p>Sorry no TIO, don't know how to import <code>momentjs</code> there. Only ran full tests in the browser + Google Apps Script (V8). The snippet below imports <code>momentjs</code> by fetch and eval.</p>
-<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-js lang-js prettyprint-override"><code>req = new XMLHttpRequest()
-req.open("GET", 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js', false)
-req.send()
-eval(req.responseText)
-m = moment
-
-f=(a,b,c)=&gt;[a+b+c,c+a+b,c+b+a].map(s=&gt;m(20+s).isValid())
-
-document.write(f('00', '01', '01') + '&lt;br /&gt;')
-document.write(f('01', '01', '31') + '&lt;br /&gt;')
-document.write(f('31', '01', '01') + '&lt;br /&gt;')
-document.write(f('01', '02', '29') + '&lt;br /&gt;')</code></pre>
-</div>
-</div>
-</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 58 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 58 bytes</h1>
 <pre><code>Ｆ¹⁰⁰Ｆ¹²Ｆ⎇⊖κ⁺²⁸¬﹪ι⁴⁻³¹﹪﹪κ⁷¦²⊞υ⟦ι⊕κ⊕λ⟧⭆⪪⭆”)∨^⍘”§⪪θ²Ｉι⁶№υＩ⪪ι²
 </code></pre>
-<p><a href="https://tio.run/##VU67bsMwDNz7FYQnClABWQn6gKegXTI4MJBsRQfBVmMhqpTKUpB@vcrEGtyB4B3veGQ/qtB7ZXP@8gGwFoLBjGQBBx2cCr/4rvugv7WLesAT49DZNKF84bDzEVs/JOvRcFgzRmJrHKmrmtCslHbi8EyyJBODLk0jJg4ftLZ1/9OX3LJP1jx0wbiI@0jt2Koz7s/WLHklaimpalFx2MStG/S1mH5uFzm8qSmiuf/3dKM@UWAq89lpym@syVm@CinX@fFi/wA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs three <code>0</code>s or <code>1</code>s depending on whether the input is in <code>YMD</code>, <code>MDY</code> or <code>DMY</code> respectively. Explanation: Inspired by @KevinCruijssen's 05AB1E answer.</p>
+<p><a href="https://tio.run/##VU67bsMwDNz7FYQnClABWQn6gKegXTI4MJBsRQfBVmMhqpTKUpB@vcrEGtyB4B3veGQ/qtB7ZXP@8gGwFoLBjGQBBx2cCr/4rvugv7WLesAT49DZNKF84bDzEVs/JOvRcFgzRmJrHKmrmtCslHbi8EyyJBODLk0jJg4ftLZ1/9OX3LJP1jx0wbiI@0jt2Koz7s/WLHklaimpalFx2MStG/S1mH5uFzm8qSmiuf/3dKM@UWAq89lpym@syVm@CinX@fFi/wA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs three <code>0</code>s or <code>1</code>s depending on whether the input is in <code>YYMMDD</code>, <code>MMDDYY</code> or <code>DDMMYY</code> respectively. Explanation: Inspired by @KevinCruijssen's 05AB1E answer.</p>
 <pre><code>Ｆ¹⁰⁰
 </code></pre>
 <p>Loop over <code>100</code> years.</p>
@@ -76,10 +52,31 @@ document.write(f('01', '02', '29') + '&lt;br /&gt;')</code></pre>
 <p>Loop over <code>28</code> or <code>29</code> days (February) or <code>31</code> or <code>30</code> days for the other months as appropriate.</p>
 <pre><code>⊞υ⟦ι⊕κ⊕λ⟧
 </code></pre>
-<p>Push a Y, M, D triplet for each valid date.</p>
+<p>Push a <code>Y, M, D</code> triplet for each valid date.</p>
 <pre><code>⭆⪪⭆”)∨^⍘”§⪪θ²Ｉι⁶№υＩ⪪ι²
 </code></pre>
-<p>Use the compressed string <code>012201210</code> to rearrange the input from YYMMDD, MMDDYY or DDMMYY into YYMMDD, then split each arrangement into a triplet and check whether they are in the list.</p>
+<p>Use the compressed string <code>012201210</code> to rearrange the input from <code>YYMMDD</code>, <code>MMDDYY</code> or <code>DDMMYY</code> into <code>YYMMDD</code>, then split each arrangement into a triplet and check whether they are in the list.</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (Node.js) + <a href="https://momentjs.com/" rel="nofollow noreferrer">momentjs</a>, 76 bytes</h1>
+<pre><code>m=require('moment')
+f=(a,b,c)=&gt;[a+b+c,c+a+b,c+b+a].map(s=&gt;m(20+s).isValid())
+</code></pre>
+<p>Based on my <a href="https://codegolf.stackexchange.com/a/275308/119296">Google Sheets answer</a>. Expects three string arguments as in <code>f('24','12','31')</code>.</p>
+<p>Sorry no TIO, don't know how to import <code>momentjs</code> there. Only ran full tests in the browser + Google Apps Script (V8). The snippet below imports <code>momentjs</code> by fetch and eval.</p>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-js lang-js prettyprint-override"><code>m = moment
+
+f=(a,b,c)=&gt;[a+b+c,c+a+b,c+b+a].map(s=&gt;m(20+s).isValid())
+
+document.write(f('00', '01', '01') + '&lt;br /&gt;')
+document.write(f('01', '01', '31') + '&lt;br /&gt;')
+document.write(f('31', '01', '01') + '&lt;br /&gt;')
+document.write(f('01', '02', '29') + '&lt;br /&gt;')</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"&gt;&lt;/script&gt;</code></pre>
+</div>
+</div>
+</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 134 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import.&quot;time&quot;
