--- a/q/275331.html
+++ b/q/275331.html
@@ -26,24 +26,36 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>610</td><td>Google Sheets</td><td>240903T222006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275336#275336">doubleun</a></td></tr>
-<tr d-ix="1"><td>552</td><td>JavaScript ES6</td><td>240903T214854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275335#275335">Arnauld</a></td></tr>
-<tr d-ix="2"><td>156</td><td>Vyxal</td><td>240903T214715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275334#275334">emanresu</a></td></tr>
+<tr d-ix="0"><td>972</td><td>Funge98</td><td>240904T052319Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275341#275341">Alt Shif</a></td></tr>
+<tr d-ix="1"><td>610</td><td>Google Sheets</td><td>240903T222006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275336#275336">doubleun</a></td></tr>
+<tr d-ix="2"><td>552</td><td>JavaScript ES6</td><td>240903T214854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275335#275335">Arnauld</a></td></tr>
+<tr d-ix="3"><td>156</td><td>Vyxal</td><td>240903T214715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275334#275334">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Google Sheets, score 610</h1>
+<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, score 972</h1>
+<pre><code>~:'+-!#[_&gt;:'--!&gt;#]_&gt;:'&lt;-!&gt;#[_&gt;:'&gt;-!#[_&gt;:',-!#[_&gt;:'.-!&gt;&gt;#]_&gt;:'[-!&gt;&gt;&gt;&gt;&gt;&gt;&gt;#]_']-!#]_&gt;
+]].....[$&quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;]+[&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;]&lt;+[&lt;+]&gt;[&gt;&quot;;..[$&quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;&quot;#;
+[&lt;...............]$&quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;]++-[&gt;&gt;+-&gt;&gt;&gt;&gt;&gt;&gt;&gt;]&lt;[&lt;]+&gt;[+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&quot;&gt;
+[&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;;+;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;:k7&lt;&lt;&lt;&lt;&lt;]...................]$&quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;&quot;
+&gt;,:1j2_]&lt;&lt;&quot;&gt;&gt;&gt;&gt;&gt;&gt;+-&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+&lt;&lt;&lt;&lt;&lt;+-&lt;&lt;&lt;[&gt;]+&lt;[+&lt;]&quot;$[
+&lt;&lt;&lt;&lt;&lt;&lt;&lt;]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;;+;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;+-[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;+-&gt;&gt;&gt;]&lt;[+&lt;]&quot;&lt;.]
+</code></pre>
+<p><a href="https://tio.run/##bZDBCsIwEETv/YumhR62CehFTZb9kWUpCFVQEC8evPjrdZs20aATKNPN8mba43h63M6jPezt/RntNL18B7ZueCDfWVtTI7PD2cUZpcs@Gad36xrPNkrfO9ENHVcibha3BpMEmJIEgRGEmEwotnoqj2lCxehKSUEFq1ywmcw6I4a0ADnUkKJKBQjZ@@tuIbpffSUGKo@pqPeby3YQRLMExTKfAkwQW@Uiazmw@mASQB2IablK3/SvHmb8L1x/QcLHbFmI6GSaNIV6x/IG" rel="nofollow noreferrer">Try it online!</a></p>
+<p>The program never halts, so if you run it using TIO, you have to manually cancel execution in order to view the output.</p>
+</div>
+<div id="pu1" class="pu"><h1>Google Sheets, score 610</h1>
 <pre><code>=switch(A1,&quot;+&quot;,&quot;&gt;[&gt;]+&lt;[+&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;-&quot;,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&lt;&quot;,&quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&gt;&quot;,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&quot;,&quot;,&quot;,&quot;&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;.&quot;,&quot;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;[&quot;,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;[&gt;]+&lt;[+&lt;]&quot;,&quot;]&quot;,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;]&lt;[+&lt;]&quot;)
 </code></pre>
 <p>Dumb solution, compression doesn't seem to pay because of the scoring system.</p>
 <p><img src="https://i.sstatic.net/nuY05CMP.png" alt="screenshot" /></p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), Score: 552</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), Score: 552</h1>
 <p>The scoring scheme makes any compression attempt counter-productive... ¯\_(ツ)_/¯</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([c,...a])=&gt;c?`&gt;[&gt;]+&lt;[+&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;-&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;-&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;-&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;-&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;-&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;-&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;[&gt;]+&lt;[+&lt;]-&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;]&lt;[+&lt;]`.split`-`[&quot;+-&lt;&gt;,.[]&quot;.indexOf(c)]+f(a):[]
 </code></pre>
 <p><a href="https://tio.run/##lZBNasMwEIX3PcWglYR@aHbFlpQjdJHlILCRpeBiLGM7Jbd3nIDTuqjQzuy@eW8eMx/1Zz35sR1m2acmLEs0FL1QStWOGeuPlUXruEaund0KudNbySflG@JoVwH@ZshYpRX7/pKU@/5n7DZ73vAnn3tIKzUNXTtXskLCpbZCoSOq7ZtwfY/UM8cjrVmBbunCDJNPYwADuL6OREOAQ1RzOs1j258pc2oMzcUHSgcBnoGxMKwSStAJxWWp7ffVYAzIAxzhDQo4MAGvrHzxqZ9SF1SXzpSc7nEF3GMeyet8J4iUcMLYTyYzTGeYzTCRYSrDMMPcypYb" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 156 bytes, score 247</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 156 bytes, score 247</h1>
 <pre><code>kT`;&gt;+-+[&gt;+]&lt;[&lt;];&gt;[+-[&gt;]+&lt;[+&lt;]++;&gt;+-+[&gt;+]&lt;[&lt;];&gt;]&lt;[+&lt;]++-&lt;++;&gt;++;&gt;+-+[&gt;+]&lt;[&lt;];&gt;[+]-&lt;++&gt;[&gt;]+&lt;[+&lt;];&gt;[+]-&lt;++&gt;.&gt;.&gt;.&gt;.&gt;.&gt;.&gt;.&gt;.-++&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,-`‛-;‛&lt;&gt;f8*Ŀ‛++/Ŀ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJrVGA7PistK1s+K108WzxdOz5bKy1bPl0rPFsrPF0rKzs+Ky0rWz4rXTxbPF07Pl08Wys8XSsrLTwrKzs+Kys7PistK1s+K108WzxdOz5bK10tPCsrPls+XSs8Wys8XTs+WytdLTwrKz4uPi4+Lj4uPi4+Lj4uPi4tKys+LD4sPiw+LD4sPiw+LD4sLWDigJstO+KAmzw+ZjgqxL/igJsrKy/EvyIsIiIsIlwiWytdPC4+LC1cIiJd" rel="nofollow noreferrer">Try it Online!</a></p>
