--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240904T132103Z
+"   /golfscore                                      20240904T133834Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/168362.html">Black Box Trigonometry                          : 0168362</a>
 <a href="q/275331.html">Convert 8 Bit brainfuck to 1 bit Brainfuck / Boo: 0275331</a>
 <a href="q/105998.html">Recreate the ASCII-table as an ASCII-table      : 0105998</a>
 <a href="q/275303.html">Is it a date format of YYMMDD MMDDYY and/or DDMM: 0275303</a>
