--- a/q/272949.html
+++ b/q/272949.html
@@ -26,11 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>074</td><td>05AB1E</td><td>240506T080301Z</td><td><a href="https://codegolf.stackexchange.com/questions/272949/sith-tie-fighter/272970#272970">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>120</td><td>Ruby</td><td>240505T014637Z</td><td><a href="https://codegolf.stackexchange.com/questions/272949/sith-tie-fighter/272957#272957">Level Ri</a></td></tr>
-<tr d-ix="2"><td>053</td><td>Charcoal</td><td>240504T201031Z</td><td><a href="https://codegolf.stackexchange.com/questions/272949/sith-tie-fighter/272953#272953">Neil</a></td></tr>
+<tr d-ix="0"><td>071</td><td>Vyxal 3 j</td><td>240904T144509Z</td><td><a href="https://codegolf.stackexchange.com/questions/272949/sith-tie-fighter/275351#275351">pacman25</a></td></tr>
+<tr d-ix="1"><td>074</td><td>05AB1E</td><td>240506T080301Z</td><td><a href="https://codegolf.stackexchange.com/questions/272949/sith-tie-fighter/272970#272970">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>120</td><td>Ruby</td><td>240505T014637Z</td><td><a href="https://codegolf.stackexchange.com/questions/272949/sith-tie-fighter/272957#272957">Level Ri</a></td></tr>
+<tr d-ix="3"><td>053</td><td>Charcoal</td><td>240504T201031Z</td><td><a href="https://codegolf.stackexchange.com/questions/272949/sith-tie-fighter/272953#272953">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 74 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a> <code>j</code>, 71 bytes</h1>
+<pre><code>&quot;ᵇḟ}₇Ḟ≠[ḃṖᵉṖΩḂΦᴿ-^4ϩṙḂṖ=q₂$↑=TỌ₂⊻¥∥»ΦB1Ṛ⌐ɾḄᵏᵂᵞ↑Ḟ¿uȦ₈≤“12ykD&quot;[=])+(&quot;⊻i6÷
+</code></pre>
+<p><a href="https://vyxal.github.io/latest.html#WyJqIiwiIiwiXCLhtYfhuJ994oKH4bie4omgW+G4g+G5luG1ieG5ls6p4biCzqbhtL8tXjTPqeG5meG4guG5lj1x4oKCJOKGkT1U4buM4oKC4oq7wqXiiKXCu86mQjHhuZrijJDJvuG4hOG1j+G1guG1nuKGkeG4nsK/dcim4oKI4omk4oCcMTJ5a0RcIls9XSkrKFwi4oq7aTbDtyIsIiIsIiIsIjMuNC42Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Similar compression trick, but the lines constant and some compression advantages save a few bytes</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 74 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>•2%jи
 Aß#™`@¬:¨úëH±ç†∍{Þθ¶@M/Š[cmγ¾?N¨‹}ÚÅ¦aoé€-èα¤ÆÖÑMÓ•&quot;_ \/|
 -[=])+(&quot;Åв
@@ -53,7 +60,7 @@ Aß#™`@¬:¨úëH±ç†∍{Þθ¶@M/Š[cmγ¾?N¨‹}ÚÅ¦aoé€-èα¤ÆÖ
 <li>Here an approach using two replacement <code>0</code>s, and manually replacing them with both <code>\/__\/</code>: <a href="https://tio.run/##AZQAa/9vc2FiaWX//@KAosOMxb3Ctc6pXsOYzrV9w7zDgeKInkTRgj3CtcK3w7JFx50l4oKG4oCcw7rDl86Uw7jDh8OuLsOAw6HRgsOuwrTCqsKyw7figLBV4oKCUcKzw7DDoFnigJrDmMOVw7zDnFnigKLigJxfIHxcLwotWzA9XSkrKOKAnMOF0LJKMOKAplwvX8K6Ov//" rel="nofollow noreferrer">79 bytes</a></li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>122</s> 120 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>122</s> 120 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-3.upto(2){|j|puts (k=j.abs)&lt;1?'|--[=| (+) [=|-[]-|':'`D;:&gt;hXQQQYVV`D;:&gt;f'.bytes.map{|i|'|  _\/  _'[i*6/6**k%6*k/j]}*''}
 </code></pre>
@@ -69,10 +76,10 @@ Aß#™`@¬:¨úëH±ç†∍{Þθ¶@M/Š[cmγ¾?N¨‹}ÚÅ¦aoé€-èα¤ÆÖ
 </code></pre>
 <p>This is the same length as the output, so it just beats the &quot;print the literal&quot; solution. It can probably be shortened a bit, but printing the literal with a few naive substitutions might be a shorter approach.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 53 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 53 bytes</h1>
 <pre><code>“ HX⁵⌊ω#⊘δ⌈L¿≦ M”‖ＭＣ¹³¦⁰Ｍ²↑-[=Ｍ²↑“ ↙~⌕ＥF℅≔?⌊Σ⁵À⌈Xζ“2~
 </code></pre>
-<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRENJIT4@Jk8/JiYmr0YBTOpGg5j6MXkxMfrxSprWXEGpaTmpySW@mUVF@UUaQAHn/IJKDUNjHQUDIMc3vyxVw0hHwSq0AMiDGqobbauESy4mBmgl0E4FfQUFiI0KGtqaCtG2QKGYGKCUPlDr////dctyAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRENJIT4@Jk8/JiYmr0YBTOpGg5j6MXkxMfrxSprWXEGpaTmpySW@mUVF@UUaQAHn/IJKDUNjHQUDIMc3vyxVw0hHwSq0AMiDGqobbauESy4mBmgl0E4FfQUFiI0KGtqaCtG2QKGYGKCUPlDr////dctyAA" rel="noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
 <pre><code>“ HX⁵⌊ω#⊘δ⌈L¿≦ M”
 </code></pre>
 <p>Draw the left half of the outside of a wing using a compressed string.</p>
