--- a/q/275350.html
+++ b/q/275350.html
@@ -26,26 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>Jelly</td><td>240904T150642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275352#275352">Jonathan</a></td></tr>
+<tr d-ix="0"><td>015</td><td>Jelly</td><td>240904T150642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275352#275352">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 12 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
-<p><sup>I'm not yet convinced this is as terse as possible.</sup></p>
-<pre><code>2‘×$⁸Ð¡ÆfFQḣ
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 15 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<p><sup>I'm not convinced this is as terse as possible.</sup></p>
+<pre><code>2‘×$⁸Ð¡ÆfḟṂṭɗ@/
 </code></pre>
 <p>A monadic Link that accepts a positive integer, <span class="math-container">\$n\$</span>, and yields a list of the first <span class="math-container">\$n\$</span> Sylvester primes.</p>
-<p><strong><a href="https://tio.run/##ASEA3v9qZWxsef//MuKAmMOXJOKBuMOQwqHDhmZGUeG4o////zc" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<p><strong><a href="https://tio.run/##ASkA1v9qZWxsef//MuKAmMOXJOKBuMOQwqHDhmbhuJ/huYLhua3Jl0Av////Nw" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
 <h4>How?</h4>
-<pre><code>2‘×$⁸Ð¡ÆfFQḣ - Link: positive integer, N
-2            - literal two (first value of Current, below)
-     Ð¡      - collect, repeating...
-    ⁸        - ...times: chain's left argument = N
-   $         - ...action: last two links as a monad - f(Current):
- ‘           -              increment {Current} -&gt; Current + 1
-  ×          -              multiply {that] by {Current} -&gt; Current × (Current + 1)
-       Æf    - prime factors (vectorises)
-         F   - flatten
-          Q  - deduplicate
-           ḣ - head {that} to index {N}
+<pre><code>2‘×$⁸Ð¡ÆfḟṂṭɗ@/ - Link: positive integer, N
+2               - literal two (first value of Current, below)
+     Ð¡         - collect, repeating...
+    ⁸           - ...times: chain's left argument = N
+   $            - ...action: last two links as a monad - f(Current):
+ ‘              -              increment {Current} -&gt; Current + 1
+  ×             -              multiply {that] by {Current} -&gt; Current × (Current + 1)
+       Æf       - prime factors (vectorises)
+              / - reduce by:
+             @  -   with swapped arguments:
+            ɗ   -     last three links as a dyad - f(right, left):
+         ḟ      -       {right} filter discard {left}
+          Ṃ     -       minimum of {that}
+           ṭ    -       tack to {left}
 </code></pre>
 </div>
 
