--- a/q/275350.html
+++ b/q/275350.html
@@ -46,16 +46,16 @@
   x = 2n,    //   x = current term of Sylvester's sequence
   h = k =&gt;   //   h is a recursive helper function taking k
   y % ++k || //   increment k; if k is not a divisor of y
-  h[         //   and h[k] is already defined ...
+  h[         //   or h[k] is already defined ...
     y /= k,  //   (divide y by k if the 2nd test was reached)
     k        //
   ] ?        //   ... then:
     h(k)     //     try again
   :          //   else:
     k,       //     return k
-  v = h(     //   initialize v by calling h
-    1n,      //   with k = 1
-    y = x    //   and y = x
+  v = h(     //   initialize v by calling h:
+    1n,      //     with k = 1
+    y = x    //     and y = x
   )          //
 ) =&gt;         //
 --n ?        // decrement n; if it's not zero:
