--- a/q/105998.html
+++ b/q/105998.html
@@ -63,6 +63,9 @@
 <tr d-ix="34"><td>173</td><td>JavaScript ES6</td><td>170107T170956Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106004#106004">Arnauld</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="http://jdk.java.net/" rel="nofollow noreferrer">Java (JDK)</a>, 194 <sup><s>200</s></sup> bytes</h1>
+<blockquote>
+<p>-6 bytes with the help of Khuldraeseth na'Barya</p>
+</blockquote>
 <p>Function that outputs the wanted text.<br><br>
 It uses <code>String.format &quot;%1$-5s%2$-5s&quot;</code> to manage the space padding to match the columns' fixed size.<br>
 And there is some calculation to get the correct decimal values and their corresponding characters.<br>
