--- a/q/275350.html
+++ b/q/275350.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>076</td><td>JavaScript ES11</td><td>240904T171431Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275355#275355">Arnauld</a></td></tr>
+<tr d-ix="0"><td>075</td><td>JavaScript ES11</td><td>240904T171431Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275355#275355">Arnauld</a></td></tr>
 <tr d-ix="1"><td>070</td><td>Ruby</td><td>240905T100333Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275369#275369">G B</a></td></tr>
 <tr d-ix="2"><td>019</td><td>Japt</td><td>240905T154442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275374#275374">Shaggy</a></td></tr>
 <tr d-ix="3"><td>084</td><td>Perl 5 + MathPrimeUtil</td><td>240905T120039Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275370#275370">Kjetil S</a></td></tr>
@@ -35,49 +35,45 @@
 <tr d-ix="6"><td>014</td><td>Jelly</td><td>240904T150642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275352#275352">Jonathan</a></td></tr>
 <tr d-ix="7"><td>015</td><td>Stax</td><td>240904T162249Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275353#275353">Khuldrae</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 76 bytes</h1>
-<p>Expects a Bigint <span class="math-container">\$n\$</span> and returns <span class="math-container">\$a(n)\$</span> as another Bigint. This assumes that Sylvester's sequence is squarefree, which is an unresolved problem (<a href="https://tio.run/##FYxBCoMwFET3niILC/k1aalL7deDiKBYbdqEn6ISFNGrp3E1b4aZ@baunbrx85sl2Vfv/YCcxIIpCYUai/WiS8XloSFT1XpHLXQdgmC1cKh46K24AGAhJZXDub3KYxGqcjUqyJwf7MhNPzNiyB6UB30GSE9KEmBbxFhnabKmvxn75k3L4412CO14C3@wN5BHu/8D" rel="nofollow noreferrer">+4 bytes</a> for a safe version without this assumption).</p>
+<div id="pu0" class="pu"><h1>JavaScript (ES11), 75 bytes</h1>
+<p>Expects a Bigint <span class="math-container">\$n\$</span> and returns <span class="math-container">\$a(n)\$</span> as another Bigint.</p>
 <p>Computes <span class="math-container">\$a(1)\$</span> to <span class="math-container">\$a(12)\$</span> almost instantly.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>f=(n,x=2n,h=k=&gt;y%++k||h[y/=k,k]?h(k):k,v=h(1n,y=x))=&gt;--n?f(n,x*-~x,h[v]=h):v
+<pre class="lang-javascript prettyprint-override"><code>f=(n,x=2n,h=x=&gt;x%++v?h(x):h[v]?h(x/v--):--n)=&gt;h(x,v=1n)?f(n,x*-~x,h[v]=h):v
 </code></pre>
-<p><a href="https://tio.run/##FYzBDoIwEAXvfEUPmHRt0cARXPgQQgJBsFqyNUAaCOCv13KaOcx7n8Y2Uzu@v3NE5tk51yMnuWBCUqHGfL0IofddlesdtdRVobiGVEuLisckV1wAMI8iKvpzd41@i1SlrVBBal1vRj50MyOGLKbM8@ElOU0IYFvAWGtoMkN3G8yL1w0PNzrA1@Hm/@CoIQsO9wc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##FYxBCoMwFET3niILC/lN0qJL7deDlILBatMiP0UlBIK9epqs5g28mY92ehvX93dXZJ9TjDNykh5rkgY9dv4khOsN99CYu3tkujqloFGKALtUpcOKoJ/z7Kx@XmYPDTQuznbly7QzYsgqalPeEtSZhAAWCsZGS5tdpstiX3zQvAx0QLLLkP7gGKAtjvgH" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Commented</h3>
-<pre class="lang-javascript prettyprint-override"><code>f = (        // f is a recursive function taking:
-  n,         //   n = input
-  x = 2n,    //   x = current term of Sylvester's sequence
-  h = k =&gt;   //   h is a recursive helper function taking a counter k
-             //   and returning the first prime factor of y which was
-             //   not listed before:
-  y % ++k || //     increment k; if k is not a divisor of y
-  h[         //     or h[k] is already defined ...
-    y /= k,  //     (divide y by k if this 2nd test was reached)
-    k        //     
-  ] ?        //     ... then:
-    h(k)     //       try again
-  :          //     else:
-    k,       //       return k
-  v = h(     //   initialize v by calling h:
-    1n,      //     with k = 1
-    y = x    //     and y = x
-  )          //   end of call
-) =&gt;         //
---n ?        // decrement n; if it's not zero:
-  f(         //   recursive call:
-    n,       //     pass n
-    x * -~x, //     update x to the next term of the sequence
-    h[v] = h //     pass h with h[v] set
-  )          //   end of recursive call
-:            // else:
-  v          //   end of recursion: return v
+<pre class="lang-javascript prettyprint-override"><code>f = (            // f is a recursive function taking:
+  n,             //   n = input
+  x = 2n,        //   x = current term of Sylvester's sequence
+  h = x =&gt;       //   h is a recursive helper function taking x
+                 //   and setting v to the smallest prime factor
+                 //   of x which was not listed before:
+  x % ++v ?      //     increment v; if v is not a divisor of x:
+    h(x)         //       try again with x unchanged
+  :              //     else:
+    h[v] ?       //       if h[v] is already defined:
+      h(x / v--) //         try again with x/v and v-1
+    :            //       else:
+      --n        //         done: decrement n and return it
+) =&gt;             //
+  h(x, v = 1n)   // invoke h, starting with v=1
+  ?              // if n is not zero:
+    f(           //   recursive call:
+      n,         //     pass n
+      x * -~x,   //     update x to the next term of the sequence
+      h[v] = h   //     pass h with h[v] set
+    )            //   end of recursive call
+  :              // else:
+    v            //   end of recursion: return v
 </code></pre>
 <hr />
-<h3>Limited recursion, 77 bytes</h3>
+<h3>Limited recursion, 82 bytes</h3>
 <p>This version can reach <span class="math-container">\$a(19)\$</span> within TIO's time limit.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>f=(n,x=2n,h=y=&gt;{for(v=1n;y%++v||h[y/=v,v];);})=&gt;h(x)||--n?f(n,x*-~x,h[v]=h):v
+<pre class="lang-javascript prettyprint-override"><code>f=(n,x=2n,h=y=&gt;{for(v=1n;y%++v||h[y/=v,v]&amp;&amp;v--;);})=&gt;h(x)||--n?f(n,x*-~x,h[v]=h):v
 </code></pre>
-<p><a href="https://tio.run/##FYzLDoMgFAX3fgULm3AL9OGy9NoPMSYaq6WNgUYN0QD9dYqrM4sz82ltO3fT@7sIbZ59jANSzVcsNFe4YekGM1GLVy23A2PWe1VtZ7Tc1hJkACwVXcF7IfRj2MWj@K1cVbZGBTcbd3vsF6IJktRIeyfFZQfGgLiMkM7o2Yz9aTQv2rQ0dzpAOucu5SA0ILMQ/w" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##FcxNDoMgFATgvadgYQ0U6I/L0mcPYkw0Vksb82jUEA3Qq1tczSxmvk9jm6kd399Zonl229YDRbFAjkLDCoXrzUgtXFGtB86t97pcz2CFrbLMSqmYCgwKTRfmvZT46Pf3Uf4WoUtbgWY3u@3E0M0ECZAIxbyT/LIXzhlxCSGtwckM3WkwL1o3NHUYWBynLnIs1EwlYfsD" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>72</s> 70 bytes</h1>
 
